Fix a majority of compile errors